--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Trying out different Node.js concepts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha test"
   },
   "author": "Benny Skogberg",
   "license": "ISC",
