--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "Benny Skogberg",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.2",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.5",
+    "node-fetch": "^2.1.1",
+    "r2": "^2.0.0",
+    "standard": "^11.0.1"
   },
   "devDependencies": {
     "mocha": "^4.0.1"
